# typst.ts

./: Cargo.toml  ___-0022213.mm_profdata  rust-toolchain.toml
benches/incremental-sweep/: Cargo.toml
benches/incremental-sweep/src/: incremental_sweep.rs
crates/conversion/typst2vec/: Cargo.toml
crates/conversion/typst2vec/src/: incr.rs  layout.rs  layout_multiline_tests.rs  lib.rs
crates/conversion/typst2vec/src/pass/: glyph2vec.rs  span2vec.rs  typst2vec.rs
crates/conversion/vec2bbox/src/: lib.rs
crates/conversion/vec2canvas/src/: lib.rs
crates/conversion/vec2dom/src/: dom.rs  incr.rs  svg_backend.rs
crates/conversion/vec2sema/src/: lib.rs
crates/conversion/vec2svg/src/: lib.rs
crates/conversion/vec2svg/src/backend/: mod.rs
crates/conversion/vec2svg/src/frontend/: dynamic_layout.rs  flat.rs  mod.rs
crates/reflexo-typst/src/exporter/: svg.rs
crates/reflexo/src/: lib.rs
crates/reflexo/src/vector/: incr.rs  ir.rs  map.rs  vm.rs
crates/reflexo/src/vector/ir/: compose.rs  module.rs  text.rs
fuzzers/incremental/src/: main.rs
tests/docs/src/: lib.rs
tests/incremental/: Cargo.toml
tests/incremental/src/: main.rs
tools/rkyv-assertions/src/: main.rs
